# python_better_git_diff

./: README.md  __init__.py  diff_parser.py  function_aware_diff.py  git_operations.py  main.py  pyproject.toml  python_function_detector.py  requirements.txt  run_tests.py  sys_check.py
tests/: test_git_operations.py  test_java_function_detection.py  test_python_function_detection.py
