[project]
name = "better-git-diff"
version = "0.1.0"
description = "A library for extracting function-level diffs from git repositories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "GitPython>=3.1.40",
    "tree-sitter>=0.25.1",
    "tree-sitter-java>=0.23.5",
]

[tool.uv]
dev-dependencies = ["pytest>=7.0.0"]
